style: fixing header issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
     color: white;
     text-align: center;
     width: 100%;
-    height: 175px;
+    height: 225px;
     margin: auto;
 }
 
